[gd_scene load_steps=30 format=2]

[ext_resource path="res://graphics/Pauschal_Paket.png" type="Texture" id=1]
[ext_resource path="res://fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Level/PNG_DIY.gd" type="Script" id=3]
[ext_resource path="res://Level/PNG_Serious.gd" type="Script" id=4]
[ext_resource path="res://Level/PNG_GLAM.gd" type="Script" id=5]
[ext_resource path="res://Level/PackageConfirmation.gd" type="Script" id=6]
[ext_resource path="res://graphics/Serious_Business.png" type="Texture" id=7]
[ext_resource path="res://graphics/DIY_Archaeology.png" type="Texture" id=8]
[ext_resource path="res://Level/Button_DIY.gd" type="Script" id=9]
[ext_resource path="res://Level/Button_GLAM.gd" type="Script" id=10]
[ext_resource path="res://Level/Button_Serious.gd" type="Script" id=11]
[ext_resource path="res://Level/PackageSelection.gd" type="Script" id=12]
[ext_resource path="res://graphics/ExGLAMAtion.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.843137, 0.819608, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.843137, 0.819608, 0.156863, 1 )
corner_detail = 2

[sub_resource type="DynamicFont" id=2]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.843137, 0.819608, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.843137, 0.819608, 0.156863, 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.843137, 0.819608, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 3
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.843137, 0.819608, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.678431, 0.705882, 0.478431, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=11]
size = 25
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.678431, 0.705882, 0.478431, 1 )

[sub_resource type="DynamicFont" id=12]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0941176, 0.611765, 0.0980392, 1 )
border_color = Color( 0.0117647, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
size = 22
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.643137, 0.14902, 0.14902, 1 )
border_color = Color( 0.0392157, 0, 0, 1 )

[node name="PackageSelection" type="Node2D"]
script = ExtResource( 12 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1078.0
texture = ExtResource( 1 )

[node name="Button_DIY" type="Button" parent="."]
margin_left = 179.0
margin_top = 843.0
margin_right = 640.0
margin_bottom = 898.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 4 )
text = "Select DIY"
script = ExtResource( 9 )

[node name="Button_GLAM" type="Button" parent="."]
margin_left = 664.0
margin_top = 600.0
margin_right = 1139.0
margin_bottom = 665.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
text = "Select ExGLAMation"
script = ExtResource( 10 )

[node name="Button_Serious" type="Button" parent="."]
margin_left = 1165.0
margin_top = 726.0
margin_right = 1622.0
margin_bottom = 785.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 6 )
text = "Select Serious Business"
script = ExtResource( 11 )

[node name="PNG_DIY" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 8 )
script = ExtResource( 3 )

[node name="PNG_GLAM" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 13 )
script = ExtResource( 5 )

[node name="PNG_Serious" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 7 )
script = ExtResource( 4 )

[node name="PackageConfirmation" type="PanelContainer" parent="."]
margin_left = 736.0
margin_top = 400.0
margin_right = 1248.0
margin_bottom = 570.0
custom_styles/panel = SubResource( 10 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="PackageConfirmation"]
margin_top = 67.0
margin_right = 512.0
margin_bottom = 102.0
mouse_filter = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
custom_styles/normal = SubResource( 14 )
text = "Pick this one?"
align = 1

[node name="confirm" type="Button" parent="PackageConfirmation/Label"]
margin_left = 26.0
margin_top = 121.0
margin_right = 187.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 12 )
custom_styles/normal = SubResource( 15 )
text = "Yes!"

[node name="decline" type="Button" parent="PackageConfirmation/Label"]
margin_left = 309.0
margin_top = 121.0
margin_right = 470.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 13 )
custom_styles/normal = SubResource( 16 )
text = "Back"

[connection signal="pressed" from="Button_DIY" to="Button_DIY" method="_on_Button_DIY_pressed"]
[connection signal="pressed" from="Button_GLAM" to="Button_GLAM" method="_on_Button_GLAM_pressed"]
[connection signal="pressed" from="Button_Serious" to="Button_Serious" method="_on_Button_Serious_pressed"]
[connection signal="pressed" from="PackageConfirmation/Label/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="PackageConfirmation/Label/decline" to="." method="_on_decline_pressed"]
